--- a/src/components/slider/Slider.module.css
+++ b/src/components/slider/Slider.module.css
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   width: fit-content;
+  margin-bottom: 15px;
   /* width: 30%; */
 
 }
@@ -24,4 +25,11 @@
   cursor: pointer;
   font-size: 1.5rem;
   z-index: 2;
+}
+
+@media screen and (min-width: 860px) {
+.slider {
+  margin-bottom: 0;
+
+}
 }
