--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,23 +3,24 @@
   background-repeat: no-repeat;
 }
 .wrapper {
-  max-width: 70vw;
-  margin: 0px auto;
+  max-width: 95vw;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 .filters {
   display: flex;
-  min-width: 35vw;
-  max-width: 45vw;
+  min-width: fit-content;
   margin: 0px auto;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: column;
+  /* justify-content: space-around; */
   align-items: center;
   background-color: white;
   border: 1px solid black;
   border-radius: 3px;
-  padding: 5px;
+  padding: 8px;
   transform: translateY(-50%);
 }
 .adults {
@@ -29,4 +30,23 @@
   width: 100%;
   height: 300px;
   object-fit: cover;
+}
+.starRating {
+  min-width: fit-content;
+}
+
+@media screen and (min-width: 860px) {
+  .wrapper {
+    /* max-width: 75vw; */
+    width: min(90%, 1100px)
+  }
+.filters {
+    /* display: flex; */
+    min-width: fit-content;
+  max-width: 35vw;
+
+    flex-direction: row;
+    justify-content: space-around;
+   
+  } 
 }
